--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,6 +35,12 @@
                 android:layout_height="36dp"
                 android:layout_width="36dp"
                 android:padding="4dp"/>
+            <ImageView
+                android:id="@+id/mainRemoveButton"
+                android:src="@drawable/ic_baseline_remove_24"
+                android:layout_width="36dp"
+                android:layout_height="36dp"
+                android:padding="4dp"/>
         </LinearLayout>
     </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
