--- a/app/src/main/res/layout/float_copy.xml
+++ b/app/src/main/res/layout/float_copy.xml
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="48dp"
-    android:layout_height="48dp"
+    android:orientation="vertical" android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:padding="4dp"
+    android:id="@+id/float_root"
     android:background="@drawable/bg_float_copy">
     <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:id="@+id/float_main_image"
         android:padding="4dp"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
         android:src="@drawable/ic_baseline_content_copy_24"/>
 </LinearLayout>
