--- a/app/src/main/res/layout/fragment_browser.xml
+++ b/app/src/main/res/layout/fragment_browser.xml
@@ -8,15 +8,24 @@
         android:layout_height="48dp"
         android:orientation="horizontal"
         android:gravity="right|center">
-        <ImageView
+       <!--><ImageView
             android:src="@drawable/ic_baseline_settings_24"
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:padding="4dp"
             android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp"/>
+            android:layout_marginEnd="8dp"/>-->
         <EditText
+            android:id="@+id/fg_br_urlTo"
+            android:textCursorDrawable="@null"
+            android:background="@null"
+            android:text="null"
+            android:textColor="#A8393939"
+            android:textSize="20sp"
+            android:paddingStart="10dp"
             android:layout_marginEnd="8dp"
+            android:singleLine="true"
+            android:imeOptions="actionSearch"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
     </LinearLayout>
