move the Context of MainActivity to NoteListFragment.

--- a/app/src/main/res/drawable/bg_node_item.xml
+++ b/app/src/main/res/drawable/bg_node_item.xml
@@ -3,13 +3,13 @@
     <item android:state_pressed="false">
         <shape android:shape="rectangle">
             <corners android:radius="4dp" />
-            <solid android:color="#E8E8E8" />
+            <solid android:color="#A3BBDB" />
         </shape>
     </item>
     <item android:state_pressed="true">
         <shape android:shape="rectangle">
             <corners android:radius="4dp"/>
-            <solid android:color="#C3C3C3"/>
+            <solid android:color="#8AABCC"/>
         </shape>
     </item>
 </selector>
