--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,48 +5,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity"
-    android:orientation="vertical"
-    android:paddingTop="23dp">
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="48dp"
-        android:orientation="horizontal">
-        <LinearLayout
-            android:layout_height="match_parent"
-            android:layout_width="0dp"
-            android:layout_weight="1">
-            <TextView
-                android:text=" 见 影 "
-                android:gravity="center"
-                android:textStyle="bold"
-                android:textColorHighlight="#000000"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:textSize="25sp"/>
-        </LinearLayout>
-        <LinearLayout
-            android:layout_height="match_parent"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:gravity="right">
-            <ImageView
-                android:id="@+id/mainAddButton"
-                android:src="@drawable/ic_baseline_add_24"
-                android:layout_height="36dp"
-                android:layout_width="36dp"
-                android:padding="4dp"/>
-            <ImageView
-                android:id="@+id/mainRemoveButton"
-                android:src="@drawable/ic_baseline_remove_24"
-                android:layout_width="36dp"
-                android:layout_height="36dp"
-                android:padding="4dp"/>
-        </LinearLayout>
-    </LinearLayout>
-   <androidx.recyclerview.widget.RecyclerView
-       android:id="@+id/mainNoteList"
-       android:layout_width="match_parent"
-       android:layout_height="match_parent"
-       android:background="#FFFFFF"/>
-
+    android:orientation="vertical">
+    <androidx.viewpager2.widget.ViewPager2
+            android:id="@+id/mainViewPager"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
 </LinearLayout>
