--- a/app/src/main/res/layout/ry_node_item.xml
+++ b/app/src/main/res/layout/ry_node_item.xml
@@ -9,12 +9,14 @@
     <TextView
         android:id="@+id/ryNoteItemTime"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:textColor="#FFFFFF"/>
     <TextView
         android:id="@+id/ryNoteItemContent"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="2dp"
         android:maxLines="4"
-        android:textSize="20sp"/>
+        android:textSize="20sp"
+        android:textColor="#FFFFFF"/>
 </LinearLayout>
