--- a/app/src/main/res/layout/activity_mainv2.xml
+++ b/app/src/main/res/layout/activity_mainv2.xml
@@ -3,7 +3,7 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingTop="23dp"
-    android:background="#F1F1F1">
+    android:background="@color/c星郎">
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/mainPager"
         android:layout_width="match_parent"
