--- a/app/src/main/res/layout/fragment_notelist.xml
+++ b/app/src/main/res/layout/fragment_notelist.xml
@@ -4,12 +4,12 @@
               xmlns:app="http://schemas.android.com/apk/res-auto"
               xmlns:tools="http://schemas.android.com/tools"
               android:layout_height="match_parent"
-              android:background="#BCD4E7"
+              android:background="@color/c星郎"
               android:paddingTop="23dp">
     <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="48dp"
-            android:background="#BCD4E7"
+            android:background="@color/c星郎"
             android:orientation="horizontal">
         <LinearLayout
                 android:layout_height="match_parent"
@@ -65,5 +65,5 @@
             android:id="@+id/mainNoteList"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="#D4E5EF"/>
+            android:background="@color/c月白"/>
 </LinearLayout>
