--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="c月白">#FFD4E5EF</color>
+    <color name="c星郎">#FFBCD4E7</color>
+    <color name="c晴山">#FFA3BBDB</color>
+    <color name="c品月">#FF8AABCC</color>
 </resources>
